{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 102,
  "lineage": "f1f32dca-0bf1-ba7d-ef29-255e156358b0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d8ad3ab25e7abc51",
            "arn": "arn:aws:ec2:ca-central-1:690805563465:instance/i-0106e2bd2c6d4d1a2",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0106e2bd2c6d4d1a2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cloud_itm",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c08179eec28898b6",
            "private_dns": "ip-10-0-0-174.ca-central-1.compute.internal",
            "private_ip": "10.0.0.174",
            "public_ip": "3.98.120.83",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01873d952212b8942",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d58776b20fdd33a8",
            "tags": {
              "Name": "nilesh"
            },
            "tags_all": {
              "Name": "nilesh"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-007065d60d054e538"
            ]
          },
          "dependencies": [
            "aws_security_group.SG",
            "aws_subnet.subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d8ad3ab25e7abc51",
            "arn": "arn:aws:ec2:ca-central-1:690805563465:instance/i-0c93c4706571c82ee",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c93c4706571c82ee",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cloud_itm",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-032b33c61a3fae2e5",
            "private_dns": "ip-10-0-0-97.ca-central-1.compute.internal",
            "private_ip": "10.0.0.97",
            "public_ip": "15.222.238.254",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f9358b0cd5d682eb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02df945fdd6b1c34e",
            "tags": {
              "Name": "nilesh"
            },
            "tags_all": {
              "Name": "nilesh"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-007065d60d054e538"
            ]
          },
          "dependencies": [
            "aws_security_group.SG",
            "aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:690805563465:internet-gateway/igw-0c0a3721269148259",
            "id": "igw-0c0a3721269148259",
            "owner_id": "690805563465",
            "tags": {
              "Name": "IGW"
            },
            "tags_all": {
              "Name": "IGW"
            },
            "vpc_id": "vpc-031a73ef9e9dddc13"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:690805563465:loadbalancer/app/nilesh/564e3f8f0fb2bcdc",
            "arn_suffix": "app/nilesh/564e3f8f0fb2bcdc",
            "dns_name": "nilesh-847534101.ca-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ca-central-1:690805563465:loadbalancer/app/nilesh/564e3f8f0fb2bcdc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nilesh",
            "security_groups": [
              "sg-007065d60d054e538"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02df945fdd6b1c34e"
              },
              {
                "subnet_id": "subnet-0d58776b20fdd33a8"
              }
            ],
            "subnets": [
              "subnet-02df945fdd6b1c34e",
              "subnet-0d58776b20fdd33a8"
            ],
            "vpc_id": "vpc-031a73ef9e9dddc13",
            "zone_id": "ZQSVJUPU6J1EY"
          },
          "dependencies": [
            "aws_security_group.SG",
            "aws_subnet.subnet",
            "aws_subnet.subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:690805563465:listener/app/nilesh/564e3f8f0fb2bcdc/ac79df700c4e6fb1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ca-central-1:690805563465:targetgroup/nilesh/0a26ea3f48c71766",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:690805563465:listener/app/nilesh/564e3f8f0fb2bcdc/ac79df700c4e6fb1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ca-central-1:690805563465:loadbalancer/app/nilesh/564e3f8f0fb2bcdc",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.LB",
            "aws_lb_target_group.TG",
            "aws_security_group.SG",
            "aws_subnet.subnet",
            "aws_subnet.subnet2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:690805563465:targetgroup/nilesh/0a26ea3f48c71766",
            "arn_suffix": "targetgroup/nilesh/0a26ea3f48c71766",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 5,
                "matcher": "200",
                "path": "/index.html",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:690805563465:targetgroup/nilesh/0a26ea3f48c71766",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nilesh",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-031a73ef9e9dddc13"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "TGA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ca-central-1:690805563465:targetgroup/nilesh/0a26ea3f48c71766-20211111141738670700000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ca-central-1:690805563465:targetgroup/nilesh/0a26ea3f48c71766",
            "target_id": "i-0106e2bd2c6d4d1a2"
          },
          "dependencies": [
            "aws_instance.instance",
            "aws_lb_target_group.TG",
            "aws_security_group.SG",
            "aws_subnet.subnet2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "TGA2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ca-central-1:690805563465:targetgroup/nilesh/0a26ea3f48c71766-20211111141738590700000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ca-central-1:690805563465:targetgroup/nilesh/0a26ea3f48c71766",
            "target_id": "i-0c93c4706571c82ee"
          },
          "dependencies": [
            "aws_instance.instance2",
            "aws_lb_target_group.TG",
            "aws_security_group.SG",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:690805563465:route-table/rtb-09620a747ff86f7bf",
            "id": "rtb-09620a747ff86f7bf",
            "owner_id": "690805563465",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c0a3721269148259",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-031a73ef9e9dddc13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf3d4acf801e598d",
            "route_table_id": "rtb-09620a747ff86f7bf",
            "subnet_id": "subnet-02df945fdd6b1c34e"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.RT",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02438b05adeb9f014",
            "route_table_id": "rtb-09620a747ff86f7bf",
            "subnet_id": "subnet-0d58776b20fdd33a8"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "aws_internet_gateway.IGW",
            "aws_route_table.RT",
            "aws_subnet.subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:690805563465:security-group/sg-007065d60d054e538",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-007065d60d054e538",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SG from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "SG",
            "name_prefix": "",
            "owner_id": "690805563465",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG"
            },
            "tags_all": {
              "Name": "SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-031a73ef9e9dddc13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:690805563465:subnet/subnet-02df945fdd6b1c34e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.0.0/25",
            "id": "subnet-02df945fdd6b1c34e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "690805563465",
            "tags": {
              "Name": "subnet"
            },
            "tags_all": {
              "Name": "subnet"
            },
            "vpc_id": "vpc-031a73ef9e9dddc13"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:690805563465:subnet/subnet-0d58776b20fdd33a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.0.128/25",
            "id": "subnet-0d58776b20fdd33a8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "690805563465",
            "tags": {
              "Name": "subnet2"
            },
            "tags_all": {
              "Name": "subnet2"
            },
            "vpc_id": "vpc-031a73ef9e9dddc13"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:690805563465:vpc/vpc-031a73ef9e9dddc13",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08d81b031fa8e29e9",
            "default_route_table_id": "rtb-0db8db4830cf59f6b",
            "default_security_group_id": "sg-0eff40e26c75b34e1",
            "dhcp_options_id": "dopt-00aee0d5ee444a63e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-031a73ef9e9dddc13",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0db8db4830cf59f6b",
            "owner_id": "690805563465",
            "tags": {
              "Name": "nilesh"
            },
            "tags_all": {
              "Name": "nilesh"
            }
          }
        }
      ]
    }
  ]
}